src/main/resources/static/css/recipe.css
/* ... */
.commentField{
    position: absolute;
    width: 46.875vw;
    height: 33.2vh;
    margin-left: 2.0834vw;
    top: 59.8vh;
    background: #F2E3B3;
    border-radius: 5vh;
}
.comment-user {
    width: 2vw;
    height: 3vh;
}
.comment-user-circle {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #F2F2EB;
    border-radius: 50%;
    margin-left: 0.26vw;
    margin-top: 0.46vh;
    width: 2.6vw;
    height: 4.6vh;
}
.comment{
    position: absolute;
    display: flex;
    width: 42.9vw;
    height: 11.5vh;
    margin-left: 2.0834vw;
    margin-top: 2vh;
    background-color:  #FBEFC7;
    border-radius: 5vh;
    font-family: 'Frank Ruhl Libre', serif;
    font-size: 1.5625vw;
}
.comment1{
    margin-top: 15.5vh;
}
.comment2{
    margin-top: 29vh;
}
/*____________________________________________________________________________________________________________________*/
.fullRecipe{
    position: absolute;
    width: 46.875vw;
    height: 63vh;
    top: 22.8vh;
    margin-left: 51.0834vw;
    background: #F2E3B3;
    border-radius: 5vh;
}

.fullRecipeHeader{
    width: 46.875vw;
    height: 4.875vh;
    background: #3E5902;
    border-radius: 5vh 5vh 0vh 0vh ;
}
.frTitle{
    position: absolute;
    font-family: 'Frank Ruhl Libre', serif;
    font-size: 2.5vw; /*48*/
    font-size: 4.445vh;
    top: -5vh;
    margin-left: 21vw;
    color: white;
}

.amountField{
    width: 12.6vw;
    height: 53.7vh;
    border-radius: 5vh;
    background-color: #FBEFC7;
    margin-left: 2vw;
    margin-top: 1.9vh;
}

.stepByStepField{
    width: 27.8645vw;
    height: 53.7vh;
    border-radius: 5vh;
    background-color: #FBEFC7;
    margin-left: 17vw;
    margin-top: -53.7vh;
}

.ingredientsHeader{
    width: 12.6vw;
    height: 3.7vh;
    background: #F2B705;
    border-radius: 5vh 5vh 0 0;
    font-family: 'Frank Ruhl Libre', serif;
    font-size: 1.5vw;
    text-align: center;
}

.devicesHeader{
    position: absolute;
    top: 43.5vh;
    border-radius: 0;
}

.deviceContent{
    position: absolute;
    top:47vh;
    left: 2vw;
    width: 1.5vw ;
}

.stepByStepHeader{
    left: 68.075vw;
    top: 29.39vh;
    width: 27.8645vw;
    text-align: center;
}

.dTitle{
    top: 38.5vh;
    margin-left: 4.5vw;
}

.sbsTitle {
    margin-left: 8vw;
}

.ratingField{
    position: absolute;
    width: 41.7vw;
    height: 5.556vh;
    background: #3E5902;
    border-radius: 5vh;
    top: 87.6vh;
    margin-left: 51.2vw;
}

.addRating{
    position: absolute;
    width: 46.875vw;
    height: 9.5vh;
    background: none;
    bottom: 4.2vh;
    margin-left: 51.25vw;
    background: #F2B705;
}

.confirmation{
    position: absolute;
    width: 2.7vw;
    height: 5.4vh;
    border-radius: 50vh;
    background: #F2B705;
    margin-left: 95vw;
    top: 87.6vh;
}

.tick{
    position: absolute;
    width: 1.5625vw;
    height: 2.32vh;
    margin-top: 1.5vh;
    margin-left: 0.5vw;
}

.ratingField div{
    font-size: 2.5vw;
    color: #F2B705;
    text-align: center;
    text-transform: uppercase;
}

.ratingField input{
    display: none;
}

.ratingField input + label{
    cursor: pointer;
}

.ratingField input:checked + label{
    color: #F2B705;
}

.ratingField input:checked + label ~ label {
    color: #E0E0E0;
}

.ratingField label:active{
    transform: scale(0.8);
    transition: 0.3s ease;
}

.footer {
    position: fixed;
    width: 100%;
    height: 5.6vh;
    top: 94.4vh;
    bottom: 0;
    background-color: #3E5902;
    color: #F2E3B3;
    padding: 1.4vh;
    display: flex;
    left: 0;
    justify-content: space-between;
    z-index: 5;
}

#overlay {
    position: fixed;
    display: none;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    background-color: rgba(0, 0, 0, 0.5);
    z-index: 10;
}

.window {
    position: fixed;
    display: none;
    bottom: 9.2593vh;
    left: 9.6vh;
    width: 59.375vw;
    height: 43.056vh;
    background: #F2E3B3;
    padding: 0.02vw;
    z-index: 11;
    border-radius: 5.5vh;
    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
}

.inner-window {
    background: #FBEFC7;
    position: absolute;
    width: 55.2083vw;
    height: 31.945vh;
    left: 2.1354167vw;
    top: 3.5185vh;
    padding-left: 0.01vw;
    border-radius: 2.25vh;
    z-index: 13;
}

#send-button {
    position: absolute;
    right: 90px;
    width: 173px;
    height: 46px;
    background-color: #3E5902;
    border-radius: 2.7vw;
    text-align: center;
    font-family: 'Frank Ruhl Libre';
    font-size: 1.25vw;
    color: #FBEFC7;
    border: none;
    top: 400px;
    bottom: 16px;
    z-index: 15;
}

#send-button:hover {
    background-color: #FBEFC7;
    color: #3E5902;
    border: 0.46vh solid #3E5902;
}

.support-button {
    position: relative;
    left: 4.6875vw;
    bottom: 0.6481vh;
    background-color: #F2E3B3;
    color: #733506;
    border-radius: 2.7vw;
    padding: 0.19vw;
    width: 8.4375vw;
    height: 4.2593vh;
    text-align: center;
    font-family: 'Frank Ruhl Libre';
    font-size: 1.25vh;
    font-size: 1.25vw;
    font-weight: 400;
    line-height: 4.2593vh;
    border: none;
    cursor: pointer;
    outline: none;
}

.support-button span {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.support-button:hover {
    background-color: transparent;
    border: 0.46vh solid #F2E3B3;
    color: #F2E3B3;
}

.circle-container {
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #F2E3B3;
    border-radius: 50%;
    width: 2.4vw;
    height: 5vh;
    bottom: 1vh;
}

.telegram-container {
    right: 5vw;
}

.instagram-container {
    right: 3vw;
}

.telegram {
    width: 2.39583vw;
    height: 4.2592vh;
}

.instagram{
    width: 2.3vw;
    height: 4.06vh;
}

.telegram-container:hover, .instagram-container:hover {
    background-color: #733506;
}
/* ... */

